; ModuleID = '/home/carl/AnghaBench/darwin-xnu/libkern/crypto/extr_corecrypto_aes.c_aes_encrypt_reset_gcm.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/libkern/crypto/extr_corecrypto_aes.c_aes_encrypt_reset_gcm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { %struct.ccmode_gcm* }
%struct.ccmode_gcm = type { i32 }

@g_crypto_funcs = common dso_local global %struct.TYPE_2__* null, align 8
@aes_error = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @aes_encrypt_reset_gcm(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca %struct.ccmode_gcm*, align 8
  store i32* %0, i32** %3, align 8
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** @g_crypto_funcs, align 8
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  %7 = load %struct.ccmode_gcm*, %struct.ccmode_gcm** %6, align 8
  store %struct.ccmode_gcm* %7, %struct.ccmode_gcm** %4, align 8
  %8 = load %struct.ccmode_gcm*, %struct.ccmode_gcm** %4, align 8
  %9 = icmp ne %struct.ccmode_gcm* %8, null
  br i1 %9, label %12, label %10

10:                                               ; preds = %1
  %11 = load i32, i32* @aes_error, align 4
  store i32 %11, i32* %2, align 4
  br label %16

12:                                               ; preds = %1
  %13 = load %struct.ccmode_gcm*, %struct.ccmode_gcm** %4, align 8
  %14 = load i32*, i32** %3, align 8
  %15 = call i32 @ccgcm_reset(%struct.ccmode_gcm* %13, i32* %14)
  store i32 %15, i32* %2, align 4
  br label %16

16:                                               ; preds = %12, %10
  %17 = load i32, i32* %2, align 4
  ret i32 %17
}

declare dso_local i32 @ccgcm_reset(%struct.ccmode_gcm*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
